Brush texture projection is not symmetrized in vertex paint mode. #120843

Closed
opened 2024-04-19 21:32:31 +02:00 by inter_net · 2 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76

Blender Version
Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: e1743a0317bc
Worked: (newest version of Blender that worked as expected)

Short description of error
While using texture on the brush in vertex paint mode (neither generated or imported texture), symmetry is not reprojecting texture correctly like in texture paint mode.

Exact steps for others to reproduce the error
Start a new project (for ease in the sculpting template);
Select high-poly mesh and enter vertex paint mode;
Assign texture to the brush (either generated or imported);
Enable symmetry and make a stroke.

The result is that the pattern will not be mirrored as expected on the other side and will be destorted based on the selected mapping method and view angle when stroke is applied to the mesh.

I attached a project based on a sculpting tempate with pre-installed settings to replicate this bug.

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76 **Blender Version** Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: `e1743a0317bc` Worked: (newest version of Blender that worked as expected) **Short description of error** While using texture on the brush in vertex paint mode (neither generated or imported texture), symmetry is not reprojecting texture correctly like in texture paint mode. **Exact steps for others to reproduce the error** Start a new project (for ease in the sculpting template); Select high-poly mesh and enter vertex paint mode; Assign texture to the brush (either generated or imported); Enable symmetry and make a stroke. The result is that the pattern will not be mirrored as expected on the other side and will be destorted based on the selected mapping method and view angle when stroke is applied to the mesh. I attached a project based on a sculpting tempate with pre-installed settings to replicate this bug.
inter_net added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-19 21:32:32 +02:00
Member

Can confirm the behavior, will have a quick look (this might actually be expected though)

Can confirm the behavior, will have a quick look (this might actually be expected though)
Philipp Oeser added
Status
Confirmed
Module
Sculpt, Paint & Texture
and removed
Status
Needs Triage
labels 2024-04-22 09:49:13 +02:00
Member

Think I have a fix for this, will post a PR shortly

Think I have a fix for this, will post a PR shortly
Philipp Oeser self-assigned this 2024-04-22 12:23:27 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-26 07:53:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120843
No description provided.