Fix #120843: Brush texture not mirrored in vertex paint mode

While using texture on the brush in vertex paint mode (neither generated
or imported texture), the brush texture is sampled based off of the
unmirrored coordinate.

To resolve, use the same method that sculptmode uses in
`sculpt_apply_texture` (flipping the coordinate over the mirror axis).

Pull Request: https://projects.blender.org/blender/blender/pulls/120935